package com.bsuir.kareley.entity;

public interface Identifiable {

    int getId();

    void setId(int id);
}
