package com.bsuir.kareley.entity;

public enum UserRole {
    USER,
    ADMIN,
    TEACHER
}
