@startuml

title __ENTITY's Class Diagram__\n

  package com.bsuir.kareley.entity {
    class Course {
        - id : int
        - title : String
        - description : String
        - participantsNumber : int
        - startDate : LocalDate
        - endDate : LocalDate
        - lessonsAmount : int
        - price : BigDecimal
        - participants : List<User>
        + Course()
        + Course()
        + Course()
        + Course()
        + Course()
        + getId()
        + setId()
        + getTitle()
        + setTitle()
        + getDescription()
        + setDescription()
        + getParticipantsNumber()
        + setParticipantsNumber()
        + getStartDate()
        + setStartDate()
        + getEndDate()
        + setEndDate()
        + getLessonsAmount()
        + setLessonsAmount()
        + getPrice()
        + setPrice()
        + getTeacher()
        + setTeacher()
        + getParticipants()
        + setParticipants()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package com.bsuir.kareley.entity {
    interface Identifiable {
        {abstract} + getId()
        {abstract} + setId()
    }
  }
  

  package com.bsuir.kareley.entity {
    class Order {
        - id : int
        - orderTime : LocalDateTime
        + Order()
        + Order()
        + getId()
        + setId()
        + getOrderTime()
        + setOrderTime()
        + getCourse()
        + setCourse()
        + getCustomer()
        + setCustomer()
        + getOrderStatus()
        + setOrderStatus()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package com.bsuir.kareley.entity {
    enum OrderStatus {
      PROCESSING
      APPROVED
      CANCELED
    }
  }
  

  package com.bsuir.kareley.entity {
    class User {
        - id : int
        - username : String
        - password : String
        - firstName : String
        - lastName : String
        - email : String
        - phoneNumber : String
        + User()
        + User()
        + User()
        + User()
        + getId()
        + setId()
        + getFirstName()
        + setFirstName()
        + getLastName()
        + setLastName()
        + getEmail()
        + setEmail()
        + getPhoneNumber()
        + setPhoneNumber()
        + getRole()
        + setRole()
        + getUsername()
        + setUsername()
        + getPassword()
        + setPassword()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package com.bsuir.kareley.entity {
    enum UserRole {
      USER
      ADMIN
      TEACHER
    }
  }
  

  Course -up-|> Identifiable
  Course o-- User : teacher
  Order -up-|> Identifiable
  Order o-- User : customer
  Order o-- Course : course
  Order o-- OrderStatus : orderStatus
  User -up-|> Identifiable
  User o-- UserRole : role


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
